Add auth suport with user and groups

--- a/web/apps.html
+++ b/web/apps.html
@@ -19,8 +19,13 @@
         </div>
         <nav class="header-nav">
           <a href="/" class="btn btn-ghost">Recent runs</a>
+          <a href="/access.html" class="btn btn-ghost">Acessos</a>
           <a href="/docs.html" class="btn btn-ghost" target="_blank" rel="noopener">Docs</a>
         </nav>
+        <div class="header-actions">
+          <a id="current-user" class="current-user" href="/profile.html"></a>
+          <button type="button" id="logout-btn" class="btn btn-ghost">Logout</button>
+        </div>
       </div>
     </header>
 
