--- a/web/group.html
+++ b/web/group.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>PiaFlow</title>
+  <title>PiaFlow — Grupo</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;1,9..40,400&display=swap" rel="stylesheet" />
@@ -18,6 +18,7 @@
           <p class="tagline">Lightweight CI/CD for Labs</p>
         </div>
         <nav class="header-nav">
+          <a href="/" class="btn btn-ghost">Recent runs</a>
           <a href="/apps.html" class="btn btn-ghost">Apps</a>
           <a href="/access.html" class="btn btn-ghost">Acessos</a>
           <a href="/docs.html" class="btn btn-ghost" target="_blank" rel="noopener">Docs</a>
@@ -33,24 +34,27 @@
       <p id="server-error" class="form-error" hidden></p>
       <section class="section">
         <div class="section-header">
-          <h2 class="section-title">Recent runs</h2>
-          <button type="button" id="refresh-runs" class="btn btn-ghost">Refresh</button>
+          <h2 id="group-title" class="section-title">Carregando grupo...</h2>
+          <a href="/access.html" class="btn btn-ghost">Voltar</a>
         </div>
-        <div id="runs-container" class="runs-container">
-          <div class="loading">Loading runs…</div>
+        <div class="split-grid">
+          <div class="panel-card">
+            <h3 class="panel-title">Usuários do grupo</h3>
+            <div id="group-users-selector" class="checkbox-grid"></div>
+            <div class="form-actions compact">
+              <button type="button" id="save-group-users" class="btn btn-primary">Salvar usuários</button>
+            </div>
+          </div>
+          <div class="panel-card">
+            <h3 class="panel-title">Apps do grupo</h3>
+            <div id="group-apps-selector" class="checkbox-grid"></div>
+            <div class="form-actions compact">
+              <button type="button" id="save-group-apps" class="btn btn-primary">Salvar apps</button>
+            </div>
+          </div>
         </div>
       </section>
     </main>
-  </div>
-
-  <div id="log-overlay" class="overlay" aria-hidden="true">
-    <div class="log-modal">
-      <div class="log-header">
-        <h3 id="log-title">Run log</h3>
-        <button type="button" id="log-close" class="btn btn-icon" aria-label="Close">×</button>
-      </div>
-      <pre id="log-content" class="log-content"></pre>
-    </div>
   </div>
 
   <script src="/js/app.js"></script>
